# family-finance-bot

./: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: budgets.py  dashboard.py  recurring.py  reports.py  transactions.py  wishlist.py
app/bot/: runner.py
app/bot/handlers/: common.py
app/bot/keyboards/: main.py
app/bot/middlewares/: idempotency.py
app/bot/states/: forms.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_groceries_weekly_budget.py  0003_purchase_advisor_persona.py
app/db/models/: __init__.py  base.py  budget.py  family.py  receipt.py  transaction.py
app/domain/: categories.py  enums.py  purchase_personas.py
app/integrations/: openai_client.py
app/prompts/: parse_receipt.md  parse_transaction.md  purchase_dialog.md  purchase_explanation.md
app/repositories/: budget.py  family.py  receipts.py  transactions.py
app/schemas/: budget.py  finance.py  transactions.py
app/services/: auth.py  budget_engine.py  receipt_service.py  transaction_service.py
app/utils/: dates.py  money.py
scripts/: reset_data.py  seed.py  start.sh
tests/: test_budget_engine.py  test_dates.py  test_receipts_and_openai.py
