[project]
name = "family-finance-bot"
version = "0.1.0"
description = "Telegram MVP for shared family finance tracking"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.10,<4",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.111,<1",
  "greenlet>=3,<4",
  "openai>=1.40,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008", "E501", "RUF001"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["app/db/migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
